First work on a java 8 port